--- a/include/text_strings.h.in
+++ b/include/text_strings.h.in
@@ -86,6 +86,11 @@
 #define TEXT_HUD_PRESS_L _("PRESS L TO SWITCH")
 #endif
 
+
+#define TEXT_HUD_MUSICOFF_ON _("Music: Off")
+#define TEXT_HUD_MUSICOFF_OFF _("Music: On")
+#define TEXT_HUD_PRESS_R _("PRESS R TO SWITCH")
+
 #if defined(VERSION_JP) || defined(VERSION_SH)
 
 /**
